[gd_scene load_steps=5 format=2]

[ext_resource path="res://Props/StairsDown.png" type="Texture" id=1]
[ext_resource path="res://Props/StairsDown.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]

[node name="StairsDown" type="StaticBody2D"]
position = Vector2( 32, 16 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="StairsDown_AreaTrigger" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StairsDown_AreaTrigger"]
position = Vector2( -16, 0 )
shape = SubResource( 2 )

[connection signal="area_entered" from="StairsDown_AreaTrigger" to="." method="_on_StairsDown_AreaTrigger_area_entered"]
